--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3'
 
 services:
-    server_test:
-        image: server_test
+    hrci:
+        image: hrci
         ports:
             - "5000:5000"
         restart: always
