--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,15 @@
-version: '3'
+version: '2'
 
 services:
-    hrci:
-        image: hrci
+    hrci_back:
+        image: hrci_back
         ports:
             - "5000:5000"
+        volumes:
+            - ./:/code
         restart: always
         networks:
-            - code-network-dev
+            - backend-network
 networks:
-    code-network-dev:
+    backend-network:
         driver: bridge
