แก้ไขสีเอ็กเซล+แก้ไฟล์Docker_compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
             - ISENV=pro
         volumes:
             - ./:/code
+            -"/home/ubuntu/HRCI/uploads:/app/uploads"
+            -"/home/ubuntu/HRCI/Template:/app/Template"
         restart: always
         networks:
             - backend-network
