--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -10,6 +10,7 @@ services:
         volumes:
             - ./:/code
             - "/home/ubuntu/dev/HRCI/uploads:/app/uploads"
+            - "/home/ubuntu/dev/HRCI/Template:/app/Template"
         restart: always
         networks:
             - code-network-dev
