--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,15 +10,11 @@ services:
             - ISENV=pro
         volumes:
             - ./:/code
-            # - uploads:/app/uploads"
-            - "/home/ubuntu/dev/HRCI/uploads:/app/uploads"
-            # - Template:/app/Template
+            - "/home/ubuntu/pro/HRCI/uploads:/app/uploads"
+            - "/home/ubuntu/pro/HRCI/Template:/app/Template"
         restart: always
         networks:
             - backend-network
 networks:
     backend-network:
         driver: bridge
-# volumes:
-#     uploads:
-#         external: True
