--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@
 version: '2'
 
 services:
-    hrci_dev:
-        image: hrci_dev
+    hrci_state:
+        image: hrci_state
         ports:
-            - "5000:5000"
+            - "8888:8888"
         environment:
             - ISENV=pro
         volumes:
