--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@
 version: '2'
 
 services:
-    hrci_dev:
-        image: hrci_dev
+    hrci_back:
+        image: hrci_back
         ports:
             - "5000:5000"
         environment:
