--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,16 @@ services:
     hrci_back:
         image: hrci_back
         ports:
-            - "8888:8888"
+            - "5000:5000"
         environment:
             - ISENV=pro
         volumes:
             - ./:/code
-            - "/home/ubuntu/state/HRCI/uploads:/app/uploads"
-            - "/home/ubuntu/state/HRCI/Template:/app/Template"
+            - "/home/ubuntu/pro/HRCI/uploads:/app/uploads"
+            - "/home/ubuntu/pro/HRCI/Template:/app/Template"
         restart: always
         networks:
-            - backend-network-state
+            - backend-network
 networks:
-    backend-network-state:
+    backend-network:
         driver: bridge
