--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,5 +16,5 @@ services:
         networks:
             - backend-network
 networks:
-    backend-network-state:
+    backend-network:
         driver: bridge
